<resources>
    <string name="app_name">KotlinToDoPractice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter Your Email .....</string>
    <string name="enter_your_pass">Enter Your Password .....</string>
    <string name="re_enter_your_pass">Re-enter Your Password .....</string>
    <string name="type_your_task">Type your task .....</string>

    <!-- TD Items -->
    <string name="task_title">Task Title</string>
    <string name="type_task_title">Type task title</string>
    <string name="task_description">Task Description</string>
    <string name="type_task_description">Type task description</string>
    <string name="task_done">Task Done</string>
    <string name="start_date_time">Start Date Time</string>
    <string name="type_start_date_time">Type start date time</string>
    <string name="end_date_time">End Date Time</string>
    <string name="type_end_date_time">Type end date time</string>
    <string name="donecheckbox">Done</string>


</resources>

